--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,4 +23,4 @@ add_subdirectory(libs)
 add_subdirectory(src)
 
 # TODO: find a better way to organize tests
-# add_subdirectory(tests)
+add_subdirectory(tests)
